<resources>
    <string name="app_name">Kerja Dekat</string>
    <string name="nav_home">Beranda</string>
    <string name="nav_search">Cari</string>
    <string name="nav_add_job">Tambah</string>
    <string name="nav_bookmarks">Bookmark</string>
    <string name="nav_applications">Lamaran</string>
    <string name="nav_riwayat">Riwayat</string>
    <string name="nav_profile">Profil</string>
    <string name="search_hint">Cari Pekerjaan&#8230;</string>
    <string name="recommendation_title">Rekomendasi Pekerjaan</string>
    <string name="see_all">Lihat Semua</string>
    <string name="apply">Lamar</string>
    <string name="apply_job">Lamar Pekerjaan</string>
    <string name="location_placeholder">Padang, Sumatera Barat</string>
    <string name="job_detail_title">Detail Pekerjaan</string>
    <string name="job_description">Deskripsi Pekerjaan</string>
    <string name="main_skills">Keahlian Utama</string>
    <string name="match_percentage">Persentasi Kecocokan</string>
    <string name="verified_employer">Pemberi Kerja Terverifikasi</string>
    <string name="shift_night">Shift Malam</string>
    <string name="distance_label">Jarak</string>
    <string name="location_label">Lokasi</string>
    <string name="net_salary">Gaji Bersih</string>
    <string name="company_location_format">%1$s • %2$s</string>
    <string name="distance_near_format">%s terdekat</string>
    <string name="match_format">%d%% cocok</string>
    <string name="job_description_placeholder">Sebagai barista yang &#8230;&#8230;&#8230;&#8230;&#8230;&#8230;&#8230;&#8230;&#8230;&#8230;</string>
    <string name="skills_placeholder">• Membuat Kopi\n• Meracik minuman\n• Cepat\n• Mengoperasikan mesin kopi</string>
    <string name="logo">Logo</string>
    <string name="skill_1">• Membuat Kopi</string>
    <string name="skill_2">• Meracik minuman</string>
    <string name="skill_3">• Cepat</string>
    <string name="skill_4">• Mengoperasikan mesin kopi</string>

    <!-- Profile -->
    <string name="profile_name">Raa</string>
    <string name="profile_username">\@rawzraa</string>
    <string name="stat_lamaran">Lamaran</string>
    <string name="stat_diprogres">Diprogres</string>
    <string name="stat_selesai">Selesai</string>
    <string name="menu_profile">Profil Saya</string>
    <string name="menu_skill">Skill Saya</string>
    <string name="menu_riwayat">Riwayat Pekerjaan</string>
    <string name="menu_pengaturan">Pengaturan</string>
    <string name="menu_bantuan">tentang</string>
    <string name="logout">Keluar</string>

    <!-- Applications -->
    <string name="status_processed">Diproses</string>
    <string name="status_accepted">Diterima</string>
    <string name="status_rejected">Ditolak</string>
    <string name="salary_offer">Gaji Penawaran</string>
    <string name="applied_time">Waktu Melamar</string>
    <string name="response_time_info">Respon biasanya 1-2 hari</string>
    <string name="see_detail">Lihat Detail</string>
    <string name="yesterday">Kemaren</string>
    <string name="today">Hari Ini</string>
    <string name="cancel_application">Batalkan</string>

    <!-- Auth -->
    <string name="login_title">Masuk</string>
    <string name="register_title">Daftar</string>
    <string name="email_label">Email</string>
    <string name="password_label">Kata Sandi</string>
    <string name="username_label">Username</string>
    <string name="login_button">MASUK</string>
    <string name="register_button">DAFTAR</string>
    <string name="not_registered">Belum terdaftar? register disini</string>
    <string name="already_registered">Sudah terdaftar? login disini</string>
</resources>